feat(worker): add task distributor for send email
