# doc/swagger/money_management.swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Money Management API",
-    "version": "1.5",
+    "version": "2.0",
     "contact": {
       "name": "gufir",
       "url": "https://github.com/gufir",
@@ -530,6 +530,45 @@
           "MoneyManagement"
         ]
       }
+    },
+    "/v1/verify_email": {
+      "get": {
+        "summary": "Verify Email",
+        "description": "Use this API to verify user email.",
+        "operationId": "MoneyManagement_VerifyEmail",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbVerifyEmailResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "emailId",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "secretCode",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "MoneyManagement"
+        ]
+      }
     }
   },
   "definitions": {
@@ -768,6 +807,9 @@
         },
         "password": {
           "type": "string"
+        },
+        "isEmailVerified": {
+          "type": "boolean"
         }
       }
     },
@@ -976,6 +1018,14 @@
         "updatedAt": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "pbVerifyEmailResponse": {
+      "type": "object",
+      "properties": {
+        "isVerified": {
+          "type": "boolean"
         }
       }
     },
